[gd_scene load_steps=5 format=2]

[ext_resource path="res://Textures/Player/Projectile/ArrowModified.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Arrows/Arrow.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 2.0
height = 8.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 3.0
height = 9.0

[node name="Arrow" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -4.76837e-07 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="HurtBox" type="Area2D" parent="."]
z_index = -1
collision_layer = 4
collision_mask = 11

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
rotation = 1.5708
shape = SubResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="PickupTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="body_entered" from="HurtBox" to="." method="_on_HurtBox_body_entered"]
[connection signal="timeout" from="PickupTimer" to="." method="_on_PickupTimer_timeout"]
